[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy", "scipy"]

[project]
name = "nara_wpe"
version = "0.0.9"
dependencies = [
    "pathlib2; python_version<'3.0'",
    "numpy",
    "tqdm",
    "soundfile",
    "bottleneck",
    "click"
]
requires-python = ">=3.6"
authors = [
  {name = "Department of Communications Engineering, Paderborn University", email = "sek@nt.upb.de"},
]
description = "Weighted Prediction Error for speech dereverberation"
readme = "README.rst"
license = {text ="MIT"}
keywords = ["speech"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3.6",
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = [
    "pytest",
    "coverage",
    "jupyter",
    "matplotlib",
    "scipy",
    "tensorflow==1.12.0; python_version<'3.7'",  # Python 3.7 has no tensorflow==1.12.0
    "pytest-cov",
    "codecov",
    "pandas",
    "torch",
    "cached_property",
    "zmq",
    "pyzmq",  # Required to install pymatbridge
    "pymatbridge",
]

[project.urls]
Homepage = "https://github.com/fgnt/nara_wpe"
Repository = "https://github.com/fgnt/nara_wpe"
